<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MyMaterialDemo</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
  <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="checkin">Checkin</string>
    <string name="menu_settings">Settings</string>
    <string name="scale_down_show_behavior">com.meterial.demo.MDesign.demo.behavior.ScaleDownShowBehavior</string>
    <string name="scale_up_show_behavior">com.meterial.demo.MDesign.demo.behavior.ScaleUpShowBehavior</string>
    <string name="swipe_dismiss_behavior">android.support.design.widget.SwipeDismissBehavior</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_go">Perform the transition</string>
    <string name="settings_short_name">settings_short_name</string>
    <string name="settings_long_name">settings_long_name</string>
    <string name="settings_disable_msg"></string>
  <string name="content">
在MVP的使用过程中，我们需要反复的去写各种MVP的接口和实现类， 实在是 太麻烦了！！所以抽时间撸了一款插件（只可用于Intellj IDEA 和 Android Studio），用于生成MVP接口以及他的实现类，可以略微提升一点开发效率...

    </string>
    <string name="content1">
关于Dagger2是啥，用法网上已经有很多了。不过听说你已经很多次Dagger2从入门到放弃了，来来，让我这个老中医给你治一治。老夫手法纯熟，不会让你有任何痛苦的，放心读下去吧。
本文同步自 博主的私人博客 wing的地方酒馆...
    </string>
<string name="content3">
Android开发规范为了规范开发，减小重构成本，总结编码规范如下，分享给大家，提供个参考命名规范 关于MVP对于MVP模式，由于需要实现众多的接口，导致代码臃肿，故决定采取Contract模式...
    </string>
    <string name="person_name">孙骁骁</string>
    <string name="person_title">演员</string>
    <string name="person_intro">
        孙骁骁，1985年4月22日出生于重庆渝中区，主持人、演员，毕业于中国传媒大学播音与主持专业04级本科班。
        2007年进入湖南娱乐频道，主持娱乐节目《娱乐急先锋》。在《挑战麦克风》、《节节高声》、《快乐女声》等众多节目担任主持。
        2010年与马天宇主演《宝贝妈妈宝贝女》。2011年与郑恺、魏巍主演《我的青春在延安》。
        2013年10月4日，与沈怡、袁弘主演《真爱惹麻烦》，2013年9月28日与张翰、郑爽主演《胜女的代价2》 。
        2015年5月11日，李响单膝跪地求婚孙骁骁，孙骁骁飙泪点头。
        演绎经历:
        2007年4月底，孙骁骁通过湖南电视台娱乐频道在中国传媒大学的招聘并往长沙进行复试。通过复试后孙骁骁开始主持娱乐资讯类节目《娱乐急先锋》。
        2008年11月，孙骁骁接到了一个内部电话，这个电话来自湖南卫视演艺事业部，对方询问她是否愿意到湖南卫视做一档新节目。这档节目，就是《挑战麦克风》。《挑战麦克风》选中孙骁骁和马可、李好搭档，其实是看中了她的麦霸功底。
        2009年3月2日，在湖南卫视正式开播的《节节高声》栏目由孙骁骁和曹颖搭档。2009年03月12日，湖南卫视《挑战麦克风》第二季启播暨节目模式外销签约仪式在湖南国际影视会展中心举办。
        2011年6月，由孙骁骁、郑恺等主演的红色青春偶像剧《我的青春在延安》正式上映，献礼建党90周年。
        2013年10月20日，由欢瑞世纪出品，明道工作室制作，孙骁骁、张翰、郑爽、乔任梁、江语晨等主演的电视剧《胜女的代价2》在湖南卫视第一周播剧场收官。2013年12月6日由林心如、袁弘、孙骁骁等主演的古装巨制《秀丽江山之长歌行》杀青。同年与黄宗泽、戚薇等主演《少年神探狄仁杰》。
        2015年，主演《新济公活佛》中的单元剧《驭夫环》。</string>
    <string name="quila_name">Quila</string>
    <string name="quila_tagline">I love bones and slippers</string>
    <string name="quila_name2">Quila!</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus. Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie. Etiam ac tristique sem, id commodo justo. Phasellus congue tincidunt lectus, at dignissim ligula maximus eu. Quisque interdum nunc eget tellus bibendum suscipit. Phasellus feugiat ultricies posuere. Nullam porta accumsan velit, ut rutrum massa fermentum eu. Nunc ac bibendum nunc. Mauris eu ultricies ipsum. Ut id dolor dui. Pellentesque dictum dui vel tempus maximus. Vivamus non nisi quis libero scelerisque pretium. Ut eu tristique justo. Sed pellentesque placerat quam, ut ultricies turpis feugiat a. Aliquam a volutpat risus.

Praesent at lectus semper, suscipit elit in, facilisis massa. Phasellus sed vestibulum ante, a euismod sem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin tincidunt orci augue, a porta odio lacinia eu. Nunc in congue risus. Maecenas commodo nibh ac enim fermentum, eu sagittis massa blandit. Vestibulum elementum massa nec dapibus mollis. Etiam porta, est sit amet aliquet porta, odio elit finibus risus, id rutrum purus mi non ipsum. Nulla viverra nec enim sed venenatis.

Maecenas mattis, erat et viverra euismod, neque diam porttitor tellus, in fringilla metus est id augue. Nunc at metus cursus, porttitor nisi vitae, congue diam. Curabitur ligula massa, ullamcorper eget scelerisque vel, pharetra ac sapien. Ut auctor luctus ultricies. Nullam semper tortor ac elementum luctus. In et tempus ex. Praesent sodales, dolor id volutpat elementum, ligula enim euismod odio, maximus sodales magna neque nec neque. Curabitur pretium nisl neque, consequat aliquet dui tincidunt ac. Vivamus augue nunc, aliquet eu ex a, ultrices aliquam lorem. Duis nibh lectus, ultricies vel iaculis sit amet, imperdiet id sapien. Duis scelerisque sodales metus eu rutrum. Suspendisse posuere nisi ac magna consequat, eu vestibulum ipsum venenatis. Suspendisse auctor nisi nec leo venenatis tristique.

Praesent tincidunt lorem sit amet mi consequat cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent vitae blandit sapien. Curabitur est sapien, lobortis sit amet facilisis vel, faucibus eu quam. Nam tempus libero at tellus tempor laoreet. Pellentesque quam lorem, tincidunt in molestie eget, dictum vel risus. Nunc gravida convallis mattis.
    </string>
    <string name="hello">Hello, I am a fake dialog</string>
    <string name="invalid_assets">Unable to load assets</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="recycler_name">Recycler Example</string>
    <string name="sort_option">Sort Example</string>
    <string name="recycler_view_option">Recycler View Example</string>
    <string name="default_sort">Default Sort</string>
    <string name="cornered_sort">Cornered Sort</string>
    <string name="continuous_sort">Continuous Sort</string>
    <string name="continuous_weighted_sort">Continuous Weighted Sort</string>
    <string name="inline_sort">Inline Sort</string>
    <string name="linear_sort">Linear Sort</string>
    <string name="radial_sort">Radial Sort</string>
    <string name="random_sort">Random Sort</string>
    <string name="bottom_to_top">Bottom to Top</string>
    <string name="top_to_bottom">Top to Bottom</string>
    <string name="left_to_right">Left to Right</string>
    <string name="right_to_left">Right to Left</string>
    <string name="top_left">Top Left</string>
    <string name="top_middle">Top Middle</string>
    <string name="top_right">Top Right</string>
    <string name="right">Right</string>
    <string name="middle">Middle</string>
    <string name="left">Left</string>
    <string name="bottom_left">Bottom Left</string>
    <string name="bottom_middle">Bottom Middle</string>
    <string name="bottom_right">Bottom Right</string>
    <string name="light">Light</string>
    <string name="medium">Medium</string>
    <string name="heavy">Heavy</string>
    <string name="reversed">Reversed</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="animation_start_duration">0s</string>
    <string name="animation_end_duration">0.1s</string>
    <string name="animation_end_longer_duration">2s</string>
    <string name="duration">Duration</string>
    <string name="delay">Delay</string>
    <string name="sort_function">Sort function:</string>
    <string name="sort_function_selection">Sort Function selection</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="code_sample">Code Sample</string>
    <string name="default_sort_code">new DefaultSort(%1$d);</string>
    <string name="cornered_sort_code">new CorneredSort(%1$d, %2$s, CorneredSort.Corner.%3$s);</string>
    <string name="continuous_sort_code">new ContinuousSort(%1$d, %2$s, RadialSort.Position.%3$s);</string>
    <string name="continuous_weighted_sort_code">new ContinuousWeightedSort(%1$d, %2$s, RadialSort.Position.%3$s, %4$s, %5$s);</string>
    <string name="inline_sort_code">new InlineSort(%1$d, %2$s, CorneredSort.Corner.%3$s);</string>
    <string name="linear_sort_code">new LinearSort(%1$d, %2$s, LinearSort.Direction.%3$s);</string>
    <string name="radial_sort_code">new RadialSort(%1$d, %2$s, RadialSort.Position.%3$s);</string>
    <string name="random_sort_code">new RandomSort(%1$d);</string>
    <string-array name="examples">
        <item>Text number 1</item>
        <item>Wow this is text 2</item>
        <item>SO MUCH TEXTS</item>
        <item>Many FADING!!!</item>
        <item>Oh Hi Mark!</item>
    </string-array>
    <string name="title_activity_details">DetailsActivity</string>
</resources>