<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.meterial.demo.commonActivity.spruce.RadioGroupGridLayout
        android:id="@+id/positional_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/top_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/top_left"/>

        <RadioButton
            android:id="@+id/top_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_right"/>

        <RadioButton
            android:id="@+id/left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left"/>

        <RadioButton
            android:id="@+id/bottom_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_middle"/>

        <RadioButton
            android:id="@+id/middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/middle"/>

        <RadioButton
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right"/>

        <RadioButton
            android:id="@+id/top_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_middle"/>

        <RadioButton
            android:id="@+id/bottom_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_right"/>

        <RadioButton
            android:id="@+id/bottom_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_left"/>

    </com.meterial.demo.commonActivity.spruce.RadioGroupGridLayout>

</merge>