<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/directional_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/bottom_to_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/bottom_to_top"/>

        <RadioButton
            android:id="@+id/top_to_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_to_bottom"/>

        <RadioButton
            android:id="@+id/right_to_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right_to_left"/>

        <RadioButton
            android:id="@+id/left_to_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left_to_right"/>

    </RadioGroup>

</merge>